# mol-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/molmcp/: __init__.py  __main__.py  server.py
src/molmcp/agents/: interactive.py
src/molmcp/agents/example/: agent.py  config.yaml
src/molmcp/agents/smiley/: agent.py  config.yaml
src/molmcp/core/: types.py
src/molmcp/tools/calcmcp/: __init__.py  server.py  tools.py
src/molmcp/tools/filesystem/: roots.py  server.py  tools.py
src/molmcp/tools/packmcp/: __init__.py  server.py  tools.py
src/molmcp/tools/qcmcp/: __init__.py  geometry.py  geomopt.py  server.py  tools.py
src/molmcp/tools/smileymcp/: __init__.py  server.py  tools.py
src/molmcp/tools/smileymcp/smileslib/: __init__.py
