[project]
name = "mol-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fast-agent-mcp",
    "fastmcp>=2.12.4",
    "rdkit>=2025.9.1",
    "ase>=3.26.0",
    "tblite>=0.5.0",
]

[project.scripts]
mol-mcp = "molmcp:main"
smiley = "molmcp.tools.smileymcp:main"
qc = "molmcp.tools.qcmcp:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.uv]
index-strategy="unsafe-first-match"
